# anki-addon-template

./: .gitignore  .isort.cfg  .pre-commit-config.yaml  .pylintrc  CHANGELOG.md  Makefile  README.md  addon.json  ankiweb_page.html  cookiecutter.json  copier.yml  dprint.json  justfile  mypy.ini  pyproject.toml  requirements_dev.txt
.github/workflows/: build-docs.yml  build_docs.sh  ci.yml  create-release.yml  create_release.yml  extract_changes.py  install_deps.sh
.vscode.dist/: extensions.json  launch.json  settings.json
designer/: form.ui
proto/: backend.proto
requirements/: base.txt  bundle.in  bundle.txt  constraints.txt  dev.in  dev.txt
src/: __init__.py  config.json  config.md  config.py  config.schema.json  consts.py  deckbrowser.py  errors.py  log.py  main.py  sveltekit.py  sveltekit_server.py
src/anki_addon_template/: extensions.py
src/backend/: server.py  services.py
src/gui/: dialog.py  hello.py  sveltekit_web.py
template/: CHANGELOG.md.jinja  README.md.jinja  addon.json.jinja  ankiweb_page.html.jinja  pyproject.toml.jinja  uv.lock.jinja
template/.github/: FUNDING.yml.jinja
template/.vscode.dist/: launch.json.jinja
template/docs/src/: support.md.jinja
template/proto/: backend.proto
template/src/: main.py
template/src/gui/: hello.py  help.py
template/ts/: package-lock.json.jinja  package.json.jinja
template/ts/src/deckbrowser/: index.ts
template/ts/src/lib/css/: base.css
template/ts/src/routes/help/: +page.svelte.jinja
ts/: bundle_ts.js  eslint.config.js  package-lock.json  package.json  vite.config.ts
ts/src/lib/: backend.ts  index.ts  nightmode.ts  theme.svelte.ts
ts/src/lib/css/: base.css
ts/src/lib/sass/: base.scss
ts/src/routes/: +layout.svelte  +layout.ts  page.svelte.spec.ts
ts/src/routes/hello/: +page.svelte
{{cookiecutter.project_slug}}/: README.md  addon.json  ankiweb_page.html  pyproject.toml
{{cookiecutter.project_slug}}/docs/: book.toml
{{cookiecutter.project_slug}}/docs/src/: support.md
{{cookiecutter.project_slug}}/src/: config.schema.json
{{cookiecutter.project_slug}}/ts/: package.json
{{cookiecutter.project_slug}}/ts/src/lib/css/: base.css
