[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "anki_addon_template"
authors = [{ name = "Abdo", email = "abdo@abdnh.net"}]
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
license = "AGPL-3.0-or-later"
dynamic = ["version"]
dependencies = [
    "copier>=9.10.3",
]

[dependency-groups]
dev = [
    "ankiscripts",
    "mypy>=1.15.0",
    "prek>=0.2.30",
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
    "ruff>=0.11.7",
]

[project.urls]
Repository = "https://github.com/abdnh/anki-addon-template"

[tool.ruff]
extend-exclude = [
    "template",
]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "PL", "TRY", "FA"]
ignore = ["PLW0603", "PLR2004"]

[tool.pytest.ini_options]
addopts = "--cov=src --cov-branch"
testpaths = ["tests"]

[tool.mypy]
pretty = true
strict_optional = false
show_error_codes = true
disallow_untyped_decorators = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unused_ignores = true
check_untyped_defs = true
disallow_untyped_defs = true
strict_equality = true

[tool.uv.sources]
ankiscripts = { git = "https://github.com/abdnh/ankiscripts" }
